[tool.poetry]
name = "mxhunt"
version = "0.2.0"
description = "checks microsoft tenant domains for mail servers"
authors = ["Luke Minniear <luke.minniear@claconnect.com>"]
readme = "README.md"
include = ["./mxhunt/helper", "./mxhunt/src"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.10"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mxhunt = "mxhunt.src.__main__:run"
